--- a/C2/W3/assignment/C2W3_Assignment.ipynb
+++ b/C2/W3/assignment/C2W3_Assignment.ipynb
@@ -698,7 +698,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": 44,
       "id": "3277ef8b",
       "metadata": {
         "id": "3277ef8b",
@@ -708,7 +708,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "490a9f0c-1bec-4e14-c1f3-a657652b9186"
+        "outputId": "7393746a-a45e-4910-8a42-23cdf2310003"
       },
       "outputs": [
         {
@@ -740,7 +740,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 45,
       "id": "bf9b8b89",
       "metadata": {
         "cellView": "code",
@@ -791,7 +791,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": 46,
       "id": "4e00a764",
       "metadata": {
         "id": "4e00a764",
@@ -801,7 +801,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f740b634-e01c-4235-cc3b-1138dae59b58"
+        "outputId": "90caaf20-e405-4892-9589-8592609053dd"
       },
       "outputs": [
         {
@@ -857,13 +857,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 48,
       "id": "1868a36d",
       "metadata": {
         "id": "1868a36d",
-        "tags": []
+        "tags": [],
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 256
+        },
+        "outputId": "095abc14-6e0e-49b9-e628-3bd59cd36ef7"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-48-916ed8ddf639>\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# fires, and stops training at 99.9% accuracy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# (It should take a few epochs)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mcallbacks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmyCallback\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m history = model.fit(train_generator,\n\u001b[1;32m      6\u001b[0m                     \u001b[0mvalidation_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalidation_generator\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'myCallback' is not defined"
+          ]
+        }
+      ],
       "source": [
         "# Run this and see how many epochs it should take before the callback\n",
         "# fires, and stops training at 99.9% accuracy\n",
