--- a/C2/W4/assignment/C2W4_Assignment.ipynb
+++ b/C2/W4/assignment/C2W4_Assignment.ipynb
@@ -387,7 +387,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "id": "42157a8c",
       "metadata": {
         "cellView": "code",
@@ -395,75 +395,96 @@
         "lines_to_next_cell": 2,
         "tags": [
           "graded"
-        ]
+        ],
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 385
+        },
+        "outputId": "b0e8d626-0d65-4ff0-f5e2-44fca2e11f3c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-27-d41e79f735ea>\u001b[0m in \u001b[0;36m<cell line: 17>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;31m# Split the training data into input (images) and labels (target) arrays\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0mtraining_images\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtraining_labels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalidation_images\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalidation_labels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparse_data_from_input\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTRAINING_FILE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;31m# Create the training generator\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-11-b4e23f1d3373>\u001b[0m in \u001b[0;36mparse_data_from_input\u001b[0;34m(input_file)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;31m# Convert your data to NumPy arrays\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mtraining_images\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtraining_images_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0mtraining_labels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtraining_labels_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mvalidation_images\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalidation_images_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'training_images_list' is not defined"
+          ]
+        }
+      ],
       "source": [
-        "# grader-required-cell\n",
+        "# Define data augmentation for the training data\n",
+        "train_datagen = ImageDataGenerator(\n",
+        "    rescale=1./255,\n",
+        "    rotation_range=40,\n",
+        "    width_shift_range=0.2,\n",
+        "    height_shift_range=0.2,\n",
+        "    shear_range=0.2,\n",
+        "    zoom_range=0.2,\n",
+        "    horizontal_flip=True,\n",
+        "    fill_mode='nearest'\n",
+        ")\n",
         "\n",
-        "# GRADED FUNCTION: train_val_generators\n",
-        "def train_val_generators(training_images, training_labels, validation_images, validation_labels):\n",
-        "  \"\"\"\n",
-        "  Creates the training and validation data generators\n",
+        "# Define a data generator for the validation data (no augmentation)\n",
+        "validation_datagen = ImageDataGenerator(rescale=1./255)\n",
         "\n",
-        "  Args:\n",
-        "    training_images (array): parsed images from the train CSV file\n",
-        "    training_labels (array): parsed labels from the train CSV file\n",
-        "    validation_images (array): parsed images from the test CSV file\n",
-        "    validation_labels (array): parsed labels from the test CSV file\n",
+        "# Split the training data into input (images) and labels (target) arrays\n",
+        "training_images, training_labels, validation_images, validation_labels = parse_data_from_input(TRAINING_FILE)\n",
         "\n",
-        "  Returns:\n",
-        "    train_generator, validation_generator - tuple containing the generators\n",
-        "  \"\"\"\n",
-        "  ### START CODE HERE\n",
+        "# Create the training generator\n",
+        "train_generator = train_datagen.flow(\n",
+        "    x=training_images,\n",
+        "    y=training_labels,\n",
+        "    batch_size=32,\n",
+        "    shuffle=True  # You can set this to True if you want to shuffle the data\n",
+        ")\n",
         "\n",
-        "  # In this section you will have to add another dimension to the data\n",
-        "  # So, for example, if your array is (10000, 28, 28)\n",
-        "  # You will need to make it (10000, 28, 28, 1)\n",
-        "  # Hint: np.expand_dims\n",
-        "  training_images = None\n",
-        "  validation_images = None\n",
+        "# Create the validation generator\n",
+        "validation_generator = validation_datagen.flow(\n",
+        "    x=validation_images,\n",
+        "    y=validation_labels,\n",
+        "    batch_size=32,\n",
+        "    shuffle=False  # Validation data should not be shuffled\n",
+        ")\n",
         "\n",
-        "  # Instantiate the ImageDataGenerator class\n",
-        "  # Don't forget to normalize pixel values\n",
-        "  # and set arguments to augment the images (if desired)\n",
-        "  train_datagen = None\n",
-        "\n",
-        "\n",
-        "  # Pass in the appropriate arguments to the flow method\n",
-        "  train_generator = train_datagen.flow(x=None,\n",
-        "                                       y=None,\n",
-        "                                       batch_size=32)\n",
-        "\n",
-        "\n",
-        "  # Instantiate the ImageDataGenerator class (don't forget to set the rescale argument)\n",
-        "  # Remember that validation data should not be augmented\n",
-        "  validation_datagen = None\n",
-        "\n",
-        "  # Pass in the appropriate arguments to the flow method\n",
-        "  validation_generator = validation_datagen.flow(x=None,\n",
-        "                                                 y=None,\n",
-        "                                                 batch_size=32)\n",
-        "\n",
-        "  ### END CODE HERE\n",
-        "\n",
-        "  return train_generator, validation_generator"
+        "# Return the generators\n",
+        "return train_generator, validation_generator"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "id": "0225e001",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 385
+        },
         "id": "0225e001",
+        "outputId": "39144022-49e1-4a35-97f1-9b1788bc7d75",
         "tags": [
           "graded"
         ]
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-17-c93bf4854fbc>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Test your generators\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtrain_generator\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalidation_generator\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_val_generators\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtraining_images\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtraining_labels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalidation_images\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalidation_labels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Images of training generator have shape: {train_generator.x.shape}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Labels of training generator have shape: {train_generator.y.shape}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-12-238ba8bef550>\u001b[0m in \u001b[0;36mtrain_val_generators\u001b[0;34m(training_images, training_labels, validation_images, validation_labels)\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m   \u001b[0;31m# Pass in the appropriate arguments to the flow method\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m   train_generator = train_datagen.flow(x=None,\n\u001b[0m\u001b[1;32m     34\u001b[0m                                        \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m                                        batch_size=32) \n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'flow'"
+          ]
+        }
+      ],
       "source": [
-        "# grader-required-cell\n",
-        "\n",
         "# Test your generators\n",
         "train_generator, validation_generator = train_val_generators(training_images, training_labels, validation_images, validation_labels)\n",
         "\n",
