--- a/C2/W4/assignment/C2W4_Assignment.ipynb
+++ b/C2/W4/assignment/C2W4_Assignment.ipynb
@@ -474,7 +474,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 76,
       "id": "f9598ae6",
       "metadata": {
         "cellView": "code",
@@ -485,20 +485,30 @@
       },
       "outputs": [],
       "source": [
-        "# grader-required-cell\n",
-        "\n",
         "def create_model():\n",
         "\n",
         "  ### START CODE HERE\n",
         "\n",
         "  # Define the model\n",
         "  # Use no more than 2 Conv2D and 2 MaxPooling2D\n",
-        "  model = None\n",
+        "  model = tf.keras.models.Sequential([\n",
+        "    tf.keras.layers.Conv2D(64, (3,3), activation='relu', input_shape=(28, 28, 1)),\n",
+        "    tf.keras.layers.MaxPooling2D(2, 2),\n",
+        "\n",
+        "    tf.keras.layers.Conv2D(64, (3,3), activation='relu'),\n",
+        "    tf.keras.layers.MaxPooling2D(2,2),\n",
+        "\n",
+        "    tf.keras.layers.Flatten(),\n",
+        "    # tf.keras.layers.Dropout(0.5),\n",
+        "    tf.keras.layers.Dense(512, activation='relu'),\n",
+        "    # tf.keras.layers.Dense(1)\n",
+        "    tf.keras.layers.Dense(26, activation='softmax')\n",
+        "  ])\n",
         "\n",
         "\n",
-        "  model.compile(optimizer = None,\n",
-        "                loss = None,\n",
-        "                metrics=[None])\n",
+        "  model.compile(optimizer = tf.keras.optimizers.Adam(learning_rate=0.001),\n",
+        "                loss = 'sparse_categorical_crossentropy',\n",
+        "                metrics=['accuracy'])\n",
         "\n",
         "  ### END CODE HERE\n",
         "\n",
@@ -510,11 +520,24 @@
       "execution_count": null,
       "id": "125be6c8",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "125be6c8",
         "lines_to_next_cell": 2,
+        "outputId": "e8b3f965-045e-4453-b7c9-468c4868a979",
         "tags": []
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/15\n",
+            "430/858 [==============>...............] - ETA: 32s - loss: 2.9395 - accuracy: 0.1127"
+          ]
+        }
+      ],
       "source": [
         "# Save your model\n",
         "model = create_model()\n",
