--- a/C2/W4/assignment/C2W4_Assignment.ipynb
+++ b/C2/W4/assignment/C2W4_Assignment.ipynb
@@ -336,7 +336,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": null,
       "id": "42157a8c",
       "metadata": {
         "cellView": "code",
@@ -348,86 +348,74 @@
       },
       "outputs": [],
       "source": [
-        "import numpy as np\n",
-        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+        "# grader-required-cell\n",
         "\n",
-        "# Function to create and return data generators\n",
+        "# GRADED FUNCTION: train_val_generators\n",
         "def train_val_generators(training_images, training_labels, validation_images, validation_labels):\n",
-        "    # Define data augmentation for the training data\n",
-        "    train_datagen = ImageDataGenerator(\n",
-        "        rescale=1./255,\n",
-        "        rotation_range=40,\n",
-        "        width_shift_range=0.2,\n",
-        "        height_shift_range=0.2,\n",
-        "        shear_range=0.2,\n",
-        "        zoom_range=0.2,\n",
-        "        horizontal_flip=True,\n",
-        "        fill_mode='nearest'\n",
-        "    )\n",
+        "  \"\"\"\n",
+        "  Creates the training and validation data generators\n",
         "\n",
-        "    # Define data augmentation for the validation data (optional)\n",
-        "    validation_datagen = ImageDataGenerator(rescale=1./255)\n",
+        "  Args:\n",
+        "    training_images (array): parsed images from the train CSV file\n",
+        "    training_labels (array): parsed labels from the train CSV file\n",
+        "    validation_images (array): parsed images from the test CSV file\n",
+        "    validation_labels (array): parsed labels from the test CSV file\n",
         "\n",
-        "    # Convert validation_images to a NumPy array\n",
-        "    validation_images = np.array(validation_images)\n",
+        "  Returns:\n",
+        "    train_generator, validation_generator - tuple containing the generators\n",
+        "  \"\"\"\n",
+        "  ### START CODE HERE\n",
         "\n",
-        "    # Reshape the training and validation data to rank-4 tensors\n",
-        "    training_images = training_images.reshape(-1, 28, 28, 1)\n",
-        "    validation_images = validation_images.reshape(-1, 28, 28, 1)\n",
+        "  # In this section you will have to add another dimension to the data\n",
+        "  # So, for example, if your array is (10000, 28, 28)\n",
+        "  # You will need to make it (10000, 28, 28, 1)\n",
+        "  # Hint: np.expand_dims\n",
+        "  training_images = None\n",
+        "  validation_images = None\n",
         "\n",
-        "    # Create the training generator\n",
-        "    train_generator = train_datagen.flow(\n",
-        "        x=training_images,\n",
-        "        y=training_labels,\n",
-        "        batch_size=32,\n",
-        "        shuffle=True  # You can set this to True if you want to shuffle the data\n",
-        "    )\n",
+        "  # Instantiate the ImageDataGenerator class\n",
+        "  # Don't forget to normalize pixel values\n",
+        "  # and set arguments to augment the images (if desired)\n",
+        "  train_datagen = None\n",
         "\n",
-        "    # Create the validation generator\n",
-        "    validation_generator = validation_datagen.flow(\n",
-        "        x=validation_images,\n",
-        "        y=validation_labels,\n",
-        "        batch_size=32,\n",
-        "        shuffle=False  # Validation data should not be shuffled\n",
-        "    )\n",
         "\n",
-        "    return train_generator, validation_generator"
+        "  # Pass in the appropriate arguments to the flow method\n",
+        "  train_generator = train_datagen.flow(x=None,\n",
+        "                                       y=None,\n",
+        "                                       batch_size=32)\n",
+        "\n",
+        "\n",
+        "  # Instantiate the ImageDataGenerator class (don't forget to set the rescale argument)\n",
+        "  # Remember that validation data should not be augmented\n",
+        "  validation_datagen = None\n",
+        "\n",
+        "  # Pass in the appropriate arguments to the flow method\n",
+        "  validation_generator = validation_datagen.flow(x=None,\n",
+        "                                                 y=None,\n",
+        "                                                 batch_size=32)\n",
+        "\n",
+        "  ### END CODE HERE\n",
+        "\n",
+        "  return train_generator, validation_generator"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": null,
       "id": "0225e001",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "id": "0225e001",
-        "outputId": "454d7b65-5dd2-4329-f89d-3f828ff1f551",
         "tags": [
           "graded"
         ]
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Images of training generator have shape: (27455, 28, 28, 1)\n",
-            "Labels of training generator have shape: (27455,)\n",
-            "Images of validation generator have shape: (7172, 28, 28, 1)\n",
-            "Labels of validation generator have shape: (7172,)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "# Load and preprocess your data\n",
-        "training_images, training_labels, validation_images, validation_labels = parse_data_from_input(TRAINING_FILE)\n",
+        "# grader-required-cell\n",
         "\n",
-        "# Create and use the generators\n",
+        "# Test your generators\n",
         "train_generator, validation_generator = train_val_generators(training_images, training_labels, validation_images, validation_labels)\n",
         "\n",
-        "# Print the shapes of the generators\n",
         "print(f\"Images of training generator have shape: {train_generator.x.shape}\")\n",
         "print(f\"Labels of training generator have shape: {train_generator.y.shape}\")\n",
         "print(f\"Images of validation generator have shape: {validation_generator.x.shape}\")\n",
@@ -474,7 +462,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": null,
       "id": "f9598ae6",
       "metadata": {
         "cellView": "code",
@@ -485,9 +473,7 @@
       },
       "outputs": [],
       "source": [
-        "def create_model():\n",
-        "\n",
-        "  ### START CODE HERE\n",
+        " ### START CODE HERE\n",
         "\n",
         "  # Define the model\n",
         "  # Use no more than 2 Conv2D and 2 MaxPooling2D\n",
@@ -525,7 +511,7 @@
         },
         "id": "125be6c8",
         "lines_to_next_cell": 2,
-        "outputId": "e8b3f965-045e-4453-b7c9-468c4868a979",
+        "outputId": "2723a2bb-7341-45d2-8411-2a6282432f71",
         "tags": []
       },
       "outputs": [
@@ -534,7 +520,23 @@
           "name": "stdout",
           "text": [
             "Epoch 1/15\n",
-            "430/858 [==============>...............] - ETA: 32s - loss: 2.9395 - accuracy: 0.1127"
+            "858/858 [==============================] - 72s 83ms/step - loss: 2.6127 - accuracy: 0.1979 - val_loss: 1.5596 - val_accuracy: 0.4596\n",
+            "Epoch 2/15\n",
+            "858/858 [==============================] - 69s 80ms/step - loss: 1.7452 - accuracy: 0.4465 - val_loss: 1.0702 - val_accuracy: 0.6280\n",
+            "Epoch 3/15\n",
+            "858/858 [==============================] - 70s 82ms/step - loss: 1.3438 - accuracy: 0.5573 - val_loss: 0.7333 - val_accuracy: 0.7434\n",
+            "Epoch 4/15\n",
+            "858/858 [==============================] - 69s 80ms/step - loss: 1.0958 - accuracy: 0.6361 - val_loss: 0.5423 - val_accuracy: 0.8031\n",
+            "Epoch 5/15\n",
+            "858/858 [==============================] - 69s 80ms/step - loss: 0.9242 - accuracy: 0.6963 - val_loss: 0.5728 - val_accuracy: 0.7861\n",
+            "Epoch 6/15\n",
+            "858/858 [==============================] - 68s 79ms/step - loss: 0.8214 - accuracy: 0.7273 - val_loss: 0.3481 - val_accuracy: 0.8744\n",
+            "Epoch 7/15\n",
+            "858/858 [==============================] - 70s 82ms/step - loss: 0.7153 - accuracy: 0.7604 - val_loss: 0.4122 - val_accuracy: 0.8450\n",
+            "Epoch 8/15\n",
+            "858/858 [==============================] - 69s 80ms/step - loss: 0.6536 - accuracy: 0.7815 - val_loss: 0.3289 - val_accuracy: 0.8826\n",
+            "Epoch 9/15\n",
+            "565/858 [==================>...........] - ETA: 23s - loss: 0.6021 - accuracy: 0.7985"
           ]
         }
       ],
