--- a/C2/W4/assignment/C2W4_Assignment.ipynb
+++ b/C2/W4/assignment/C2W4_Assignment.ipynb
@@ -336,7 +336,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 81,
       "id": "42157a8c",
       "metadata": {
         "cellView": "code",
@@ -348,68 +348,78 @@
       },
       "outputs": [],
       "source": [
-        "# grader-required-cell\n",
+        "import numpy as np\n",
+        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
         "\n",
-        "# GRADED FUNCTION: train_val_generators\n",
+        "# Function to create and return data generators\n",
         "def train_val_generators(training_images, training_labels, validation_images, validation_labels):\n",
-        "  \"\"\"\n",
-        "  Creates the training and validation data generators\n",
+        "    # Define data augmentation for the training data\n",
+        "    train_datagen = ImageDataGenerator(\n",
+        "        rescale=1./255,\n",
+        "        rotation_range=40,\n",
+        "        width_shift_range=0.2,\n",
+        "        height_shift_range=0.2,\n",
+        "        shear_range=0.2,\n",
+        "        zoom_range=0.2,\n",
+        "        horizontal_flip=True,\n",
+        "        fill_mode='nearest'\n",
+        "    )\n",
         "\n",
-        "  Args:\n",
-        "    training_images (array): parsed images from the train CSV file\n",
-        "    training_labels (array): parsed labels from the train CSV file\n",
-        "    validation_images (array): parsed images from the test CSV file\n",
-        "    validation_labels (array): parsed labels from the test CSV file\n",
+        "    # Define data augmentation for the validation data (optional)\n",
+        "    validation_datagen = ImageDataGenerator(rescale=1./255)\n",
         "\n",
-        "  Returns:\n",
-        "    train_generator, validation_generator - tuple containing the generators\n",
-        "  \"\"\"\n",
-        "  ### START CODE HERE\n",
+        "    # Convert validation_images to a NumPy array\n",
+        "    validation_images = np.array(validation_images)\n",
         "\n",
-        "  # In this section you will have to add another dimension to the data\n",
-        "  # So, for example, if your array is (10000, 28, 28)\n",
-        "  # You will need to make it (10000, 28, 28, 1)\n",
-        "  # Hint: np.expand_dims\n",
-        "  training_images = None\n",
-        "  validation_images = None\n",
+        "    # Reshape the training and validation data to rank-4 tensors\n",
+        "    training_images = training_images.reshape(-1, 28, 28, 1)\n",
+        "    validation_images = validation_images.reshape(-1, 28, 28, 1)\n",
         "\n",
-        "  # Instantiate the ImageDataGenerator class\n",
-        "  # Don't forget to normalize pixel values\n",
-        "  # and set arguments to augment the images (if desired)\n",
-        "  train_datagen = None\n",
+        "    # Create the training generator\n",
+        "    train_generator = train_datagen.flow(\n",
+        "        x=training_images,\n",
+        "        y=training_labels,\n",
+        "        batch_size=32,\n",
+        "        shuffle=True  # You can set this to True if you want to shuffle the data\n",
+        "    )\n",
         "\n",
+        "    # Create the validation generator\n",
+        "    validation_generator = validation_datagen.flow(\n",
+        "        x=validation_images,\n",
+        "        y=validation_labels,\n",
+        "        batch_size=32,\n",
+        "        shuffle=False  # Validation data should not be shuffled\n",
+        "    )\n",
         "\n",
-        "  # Pass in the appropriate arguments to the flow method\n",
-        "  train_generator = train_datagen.flow(x=None,\n",
-        "                                       y=None,\n",
-        "                                       batch_size=32)\n",
-        "\n",
-        "\n",
-        "  # Instantiate the ImageDataGenerator class (don't forget to set the rescale argument)\n",
-        "  # Remember that validation data should not be augmented\n",
-        "  validation_datagen = None\n",
-        "\n",
-        "  # Pass in the appropriate arguments to the flow method\n",
-        "  validation_generator = validation_datagen.flow(x=None,\n",
-        "                                                 y=None,\n",
-        "                                                 batch_size=32)\n",
-        "\n",
-        "  ### END CODE HERE\n",
-        "\n",
-        "  return train_generator, validation_generator"
+        "    return train_generator, validation_generator"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 82,
       "id": "0225e001",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "0225e001",
+        "outputId": "db87e1d0-9326-493a-87d1-81f67f9b30e5",
         "tags": [
           "graded"
         ]
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Images of training generator have shape: (27455, 28, 28, 1)\n",
+            "Labels of training generator have shape: (27455,)\n",
+            "Images of validation generator have shape: (7172, 28, 28, 1)\n",
+            "Labels of validation generator have shape: (7172,)\n"
+          ]
+        }
+      ],
       "source": [
         "# grader-required-cell\n",
         "\n",
@@ -462,16 +472,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 83,
       "id": "f9598ae6",
       "metadata": {
         "cellView": "code",
         "id": "f9598ae6",
         "tags": [
           "graded"
-        ]
+        ],
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 145
+        },
+        "outputId": "d05be87c-00f3-4c3f-bc2f-ba53aeec3864"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndentationError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-83-7726b7be4a27>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    model = tf.keras.models.Sequential([\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+          ]
+        }
+      ],
       "source": [
         " ### START CODE HERE\n",
         "\n",
@@ -503,7 +527,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 77,
       "id": "125be6c8",
       "metadata": {
         "colab": {
@@ -536,7 +560,19 @@
             "Epoch 8/15\n",
             "858/858 [==============================] - 69s 80ms/step - loss: 0.6536 - accuracy: 0.7815 - val_loss: 0.3289 - val_accuracy: 0.8826\n",
             "Epoch 9/15\n",
-            "565/858 [==================>...........] - ETA: 23s - loss: 0.6021 - accuracy: 0.7985"
+            "858/858 [==============================] - 70s 82ms/step - loss: 0.5934 - accuracy: 0.7997 - val_loss: 0.2925 - val_accuracy: 0.8996\n",
+            "Epoch 10/15\n",
+            "858/858 [==============================] - 68s 79ms/step - loss: 0.5452 - accuracy: 0.8189 - val_loss: 0.2799 - val_accuracy: 0.9059\n",
+            "Epoch 11/15\n",
+            "858/858 [==============================] - 69s 80ms/step - loss: 0.5160 - accuracy: 0.8260 - val_loss: 0.2064 - val_accuracy: 0.9361\n",
+            "Epoch 12/15\n",
+            "858/858 [==============================] - 66s 77ms/step - loss: 0.4795 - accuracy: 0.8392 - val_loss: 0.2393 - val_accuracy: 0.9251\n",
+            "Epoch 13/15\n",
+            "858/858 [==============================] - 66s 76ms/step - loss: 0.4458 - accuracy: 0.8507 - val_loss: 0.1694 - val_accuracy: 0.9377\n",
+            "Epoch 14/15\n",
+            "858/858 [==============================] - 63s 73ms/step - loss: 0.4316 - accuracy: 0.8558 - val_loss: 0.1759 - val_accuracy: 0.9387\n",
+            "Epoch 15/15\n",
+            "858/858 [==============================] - 65s 76ms/step - loss: 0.4089 - accuracy: 0.8601 - val_loss: 0.1704 - val_accuracy: 0.9414\n"
           ]
         }
       ],
